# peterson_project

./: README.md  dune-project  peterson_project.opam
_build/: .db  .digest-db  log
_build/default/: peterson_project.dune-package  peterson_project.install  peterson_project.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/peterson_project/lib/: dune  peterson.cma  peterson.cmxa  peterson.cmxs  peterson.ml
_build/default/peterson_project/lib/.merlin-conf/: lib-peterson
_build/default/peterson_project/lib/.peterson.objs/byte/: peterson.cmi  peterson.cmo  peterson.cmt
_build/default/peterson_project/lib/.peterson.objs/native/: peterson.cmx
_build/default/peterson_project/test/: dune  test_peterson.ml
_build/default/peterson_project/test/.merlin-conf/: exe-test_peterson
_build/default/peterson_project/test/.test_peterson.eobjs/byte/: dune__exe__Test_peterson.cmi  dune__exe__Test_peterson.cmo  dune__exe__Test_peterson.cmt
_build/default/peterson_project/test/.test_peterson.eobjs/native/: dune__exe__Test_peterson.cmx
_build/default/peterson_project/test/_build/_tests/: PetersonU+0027s Algorithm Tests
_build/default/peterson_project/test/_build/_tests/KLQLB53H/: initial state.000.output  model check.000.output  step.000.output
_build/install/default/lib/peterson_project/: META  dune-package  opam
peterson_project/lib/: peterson.ml
peterson_project/test/: test_peterson.ml
